[FIX] web, mail: searchbar facet cog overlapping
When discuss is not installed, hovering a facet in the searchbar makes
the cog overlap the icon/text.

This is due to the `o-bg-inherit` class which is set in the mail module.
Therefore if discuss is not installed, the SCSS for the background
doesn't exist.

This commit moves the `o-bg-inherit` as a new utility class `bg-inherit`
, allowing it to be used even if no apps are installed.

Therefore also renaming the occurences of `o-bg-inherit` into
`bg-inherit`.

task-3575837

closes odoo/odoo#140334

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -2,10 +2,6 @@
     background-color: rgba(0, 0, 0, var(--bg-opacity, 1));
 }
 
-.o-bg-inherit {
-    background-color: inherit;
-}
-
 .o-discuss-badge {
     --o-discuss-badge-bg: #{$o-success}; // sync with --o-navbar-badge-bg
     color: white !important;
